--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@ body {
 
 .container {
   max-width: 1000px;
-  border: 2px solid steelblue;
+  /* border: 2px solid steelblue; */
   margin: 30px auto;
   padding: 30px;
   text-align: center;
@@ -16,7 +16,7 @@ body {
   /* font-size 0 or there will be space between rows */
   /* outline should be 2px to match because grid 1px will match with the next grid 1px */
   /* outline is now 1px because of border */
-  /* outline: 1px solid black; */
+  outline: 1px solid black;
   margin: 35px auto;
   font-size: 0;
 }
@@ -35,18 +35,36 @@ body {
 }
 
 .cell.start {
-  background-color: cyan;
+  background-color: rgb(0, 255, 38);
 }
 
 .cell.end {
   background-color: rgb(237, 139, 28);
 }
 
+.cell.wall {
+  background-color: brown;
+}
+
+@keyframes visitAnimation {
+  from {background-color: rgb(0, 183, 255);}
+  to {background-color: aquamarine;}
+}
+
 .cell.visitedColor {
+  animation-name: visitAnimation;
   background-color: aquamarine;
+  animation-duration: 1s;
+}
+
+@keyframes pathAnimation {
+  from {background-color: rgb(255, 98, 0);}
+  to {background-color: yellow;}
 }
 
 .cell.path {
+  animation-name: pathAnimation;
+  animation-duration: 1s;
   background-color: yellow;
 }
 
