--- a/src/index.css
+++ b/src/index.css
@@ -5,18 +5,46 @@ body {
 }
 
 .form-control {
-  /* display: block; */
-  /* font-size: 30px; */
-  /* position: relative; */
-  font-size: 30px;
+  font-size: 1.5rem;
   font-weight: bold;
   line-height: 1.1;
   display: grid;
   grid-template-columns: 1em auto;
   gap: 0.5em;
-  /* justify-content: center; */
-  padding-left: 43%;
+  padding-left: 40%;
   text-align: left;
+  margin-top: 10px;
+  width: fit-content;
+}
+
+input[type="radio"] {
+  -webkit-appearance: none;
+  appearance: none;
+  background-color: #fff;
+  margin: 0;
+  font: inherit;
+  color: black;
+  width: 1.15em;
+  height: 1.15em;
+  border: 0.15em solid black;
+  border-radius: 50%;
+
+  display: grid;
+  place-content: center;
+}
+
+input[type="radio"]::before {
+  content: "";
+  width: 0.65em;
+  height: 0.65em;
+  border-radius: 50%;
+  transform: scale(0);
+  transition: 150ms transform ease-in-out;
+  box-shadow: inset 1em 1em rgb(10, 107, 225);
+}
+
+input[type="radio"]:checked::before {
+  transform: scale(1);
 }
 
 .container {
@@ -29,7 +57,6 @@ body {
 
 .gridContainer {
   /* font-size 0 or there will be space between rows */
-  /* outline should be 2px to match because grid 1px will match with the next grid 1px */
   /* outline is now 1px because of border */
   outline: 1px solid black;
   margin: 35px auto;
@@ -39,7 +66,6 @@ body {
 .cell {
   /* outline better than border here or we will need to adjust width minus border px */
   /* border is needed since background color will overlap with outline, thus no outline */
-  /* outline: 1px solid black; */
   border: 1px solid black;
   width: 48px;
   height: 48px;
