--- a/src/index.css
+++ b/src/index.css
@@ -63,7 +63,7 @@ input[type="radio"]:checked::before {
 
 .gridContainer {
   /* font-size 0 or there will be space between rows */
-  outline: 1px solid black;
+  box-shadow: 1px 1px #000;
   margin: 35px auto;
   font-size: 0;
   width: 80%;
