--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,13 @@
 
 body {
   font-family: 'Open Sans', sans-serif;
+  margin: 0%;
+}
+
+@media (min-width: 542px) {
+  .form-control {
+    padding-left: 40%;
+  }
 }
 
 .form-control {
@@ -11,7 +18,6 @@ body {
   display: grid;
   grid-template-columns: 1em auto;
   gap: 0.5em;
-  padding-left: 40%;
   margin-top: 10px;
   width: fit-content;
 }
@@ -46,17 +52,10 @@ input[type="radio"]:checked::before {
   transform: scale(1);
 }
 
-/* .test {
-  width: 50vw;
-  height: 100px;
-  background-color: aqua;
-  margin: auto;
-} */
-
 .container {
   /* border: 2px solid steelblue; */
-  margin: 30px auto;
-  /* padding: 30px;  */
+  margin: auto;
+  padding: 30px; 
   text-align: center;
   width: 100%;
 }
