--- a/src/index.css
+++ b/src/index.css
@@ -165,6 +165,8 @@ input[type="radio"]:checked::before {
   padding: 0;
   text-align: center;
 
+  background-color: #fff;
+
   /* background-color: rgba(0, 142, 250, 0.25); */
 }
 
@@ -201,22 +203,27 @@ input[type="radio"]:checked::before {
   to {background-color: aquamarine;}
 }
 
-.cell.weight1.visitedColor {
+.cell.weight1.outerScan {
   animation-name: visitAnimation;
   animation-duration: 0.5s;
 }
 
-.cell.weight2.visitedColor {
+.cell.weight2.outerScan {
   animation-name: visitAnimation;
   animation-duration: 0.5s;
 }
 
-.cell.weight3.visitedColor {
+.cell.weight3.outerScan {
   animation-name: visitAnimation;
   animation-duration: 0.5s;
 }
 
-.cell.empty.visitedColor {
+.cell.empty.outerScan {
+  animation-name: visitAnimation;
+  animation-duration: 1s;
+}
+
+.cell.visitedPath {
   animation-name: visitAnimation;
   background-color: aquamarine;
   animation-duration: 1s;
@@ -231,17 +238,4 @@ input[type="radio"]:checked::before {
   animation-name: pathAnimation;
   animation-duration: 1s;
   background-color: yellow;
-}
-
-.my-btn {
-  background: #000;
-  color: #fff;
-  border: none;
-  padding: 10px 20px;
-  margin: 10px;
-  border-radius: 5px;
-  cursor: pointer;
-  text-decoration: none;
-  font-size: 15px;
-  font-family: inherit;
 }
