--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,6 @@
 body {
   font-family: 'Open Sans', sans-serif;
   margin: 0%;
-  /* background-color: #000; */
 }
 
 @media (max-width: 542px) {
@@ -49,14 +48,9 @@ body {
   */
 
   outline: 1px solid cornflowerblue;
-  /* width: calc((100% / 40));
-  height: calc((100% / 13)); */
 
   width: calc((100% / 80));
-  height: 25px;
-
-  /* box-shadow: -1px -1px #000;
-  box-shadow: 1px 1px #000; */
+  height: calc(100vh / 40);
 
   display: inline-block;
   margin: 0;
@@ -65,7 +59,6 @@ body {
 
   background-color: #fff;
 
-  /* background-color: rgba(0, 142, 250, 0.25); */
 }
 
 .cell.empty {
